--- a/front/src/Components/Thesis/Thesis.css
+++ b/front/src/Components/Thesis/Thesis.css
@@ -48,3 +48,13 @@
     width: 0;
     color: transparent;
 }
+
+#components-dropdown-demo-arrow .ant-btn {
+    margin-right: 8px;
+    margin-bottom: 8px;
+}
+.ant-row-rtl #components-dropdown-demo-arrow .ant-btn {
+    margin-right: 0;
+    margin-bottom: 8px;
+    margin-left: 8px;
+}
